--- a/examples/profile/pubspec.yaml
+++ b/examples/profile/pubspec.yaml
@@ -23,6 +23,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   surf_lint_rules: ^1.4.1
+  integration_test:
+    sdk: flutter
+  flutter_driver:
+   sdk: flutter
+  flutter_gherkin: ^3.0.0-rc.17
+  surf_flutter_test:
+    git:
+      url: https://github.com/surfstudio/surf-flutter-test
+      ref: main
 
 environment:
   sdk: ">=2.14.0-0 <3.0.0"
